@@ -36,8 +36,6 @@ from TestCmd import PIPE
 
 default_version = '2.3.1.alpha.yyyymmdd'
 
-copyright_years = '2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013'
-
 python_version_unsupported = (2, 3, 0)
 python_version_deprecated = (2, 7, 0)
 
