@@ -3,9 +3,7 @@
 #
 # See the README.rst file for an overview of how SCons is built and tested.
 
-# When this gets changed, you must also change the copyright_years string
-# in QMTest/TestSCons.py so the test scripts look for the right string.
-copyright_years = '2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013'
+copyright_years = '2001-2014'
 
 # This gets inserted into the man pages to reflect the month of release.
 month_year = 'MONTH YEAR'
